--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "angular-ui-router": "^0.3.1",
-    "angular": "^1.5.7"
+    "angular": "^1.5.7",
+    "font-awesome": "^4.6.3"
   }
 }
